--- a/mini_project/saju/pubspec.yaml
+++ b/mini_project/saju/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   http: ^1.2.2
   flutter_dotenv: ^5.1.0
   xml: ^6.5.0
+  charset_converter: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
