feat. 디플로이+서비스키 수정

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@ game/*/Assets/AddressableAssetsData/*/*.bin*
 # Android StreamingAssets 자동 생성물
 game/*/Assets/StreamingAssets/aa/
 game/*/Assets/StreamingAssets/aa.meta
+
+#디플로이
+scripts/*
