--- a/mini_project/saju/pubspec.yaml
+++ b/mini_project/saju/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   xml: ^6.5.0
   charset_converter: ^2.1.0
   provider: ^6.0.5
+  share_plus: ^7.2.1
+  url_launcher: ^6.2.5
+  
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
