--- a/mini_project/nell_weather/pubspec.yaml
+++ b/mini_project/nell_weather/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,6 +48,9 @@ dependencies:
   intl: ^0.20.2
   flutter_dotenv: ^6.0.0
   flutter_local_notifications: ^20.0.0
+  geolocator: ^14.0.2
+  geocoding: ^4.0.0
+  uuid: ^4.5.2
 
 
 dev_dependencies:
